--- a/style.css
+++ b/style.css
@@ -116,3 +116,41 @@ nav.navi a.selected {
 .contents ul.list li .description p {
   color: rgb(153, 153, 153);
 }
+
+.footer {
+  margin-top: 32px;
+  background-color: rgb(51, 51, 51);
+}
+.footer .wrapper {
+  overflow: hidden;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.footer .wrapper .logo {
+  float: left;
+  margin: 32px 0;
+}
+.footer .wrapper .lists {
+  float: right;
+}
+.footer .wrapper .links {
+  float: left;
+  margin: 32px;
+}
+
+.footer .wrapper .links h5 {
+  color: rgb(238, 238, 238);
+  margin: 0 0 8px 0;
+  font-size: 16px;
+  font-weight: 800;
+}
+.footer .wrapper .links ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer .wrapper .links ul li {
+  color: rgb(89, 89, 89);
+  font-size: 13px;
+}
