--- a/public/style.css
+++ b/public/style.css
@@ -1,74 +1,110 @@
-* {
-  /* border: 1px solid red; */
-}
-body {
-  background-color: rgb(240, 240, 240);
-}
-header.header {
-  position: relative;
-  background: rgb(13, 101, 164);
-  min-height: 230px;
+/* Reset */
+body, ul, h2, p {
+  margin: 0;
+  padding: 0;
 }
 
-.header .wrapper {
+li {
+  list-style-type: none;
+}
+
+/* Layouts */
+.l_wrapper {
   max-width: 1024px;
   margin: 0 auto;
   position: relative;
 }
 
-nav.navi {
+.l_wrapper:after {
+    content: ' ';
+    display: table;
+    clear: both;
+}
+
+.l_sidebar {
+    width: 200px;
+    float: right;
+    margin-left: 16px;
+}
+
+.l_main {
+    overflow: hidden;
+}
+
+/* Commons */
+.clearfix:before,
+.clearfix:after {
+    content: ' ';
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/* Components */
+body {
+  background-color: rgb(240, 240, 240);
+}
+
+.header {
+  position: relative;
+  background: rgb(13, 101, 164);
+}
+
+.header-logo {
+  display: inline-block;
+  padding: 48px 0;
+}
+
+.header-nav {
   background: rgb(23, 145, 208);
   width: 100%;
 }
 
-nav.navi a {
+.header-nav a {
   color: #fff;
   text-decoration: none;
   display: inline-block;
   padding: 16px;
 }
 
-nav.navi a.selected {
+.header-nav a.is_active {
   background: #fff;
   color: black;
 }
 
-.header .logo {
-  display: block;
-  right: 0;
-  padding: 48px 0;
-}
-
-.header .wave {
+.header-cover {
   position: absolute;
   right: -48px;
-  top: 16px;
+  bottom: 0;
 }
 
 .contents {
   overflow: hidden;
-  max-width: 1024px;
-  margin: 0 auto;
-  background-color: #fff;
+  background-color: #ddd;
 }
 
-.contents aside.sidebar {
-  float: right;
-  margin: 16px;
+.contents-inside {
+   background-color: #fff;
+   padding: 16px;
+   margin-bottom: 16px;
 }
 
-.contents aside.sidebar h5 {
+.fields h5 {
   color: rgb(23, 145, 208);
   font-size: 24px;
   font-weight: 800;
   margin: 0;
 }
-.contents aside.sidebar ul {
+
+.fields ul {
   margin: 4px 0;
   padding: 0;
   list-style: none;
 }
-.contents aside.sidebar ul li {
+
+.fields ul li {
   border-left: 3px solid rgb(221, 221, 221);
   padding: 2px 8px;
   color: rgb(165, 165, 165);
@@ -76,115 +112,84 @@ nav.navi a.selected {
   font-weight: 400;
 }
 
-.contents ul.list {
-  max-width: 1024px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  padding-right: 180px;
+.list {
+    
 }
 
-.contents ul.list li {
-  display: block;
-  margin: 16px;
+.list-item {
+  margin-bottom: 16px;
   padding-bottom: 16px;
   border-bottom: 1px dashed grey;
 }
 
-.contents ul.list li:last-child {
+.list-item:last-child {
+  margin-bottom: 0;
   border-bottom: 0;
+  padding-bottom: 0;
 }
 
-.contents ul.list li:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-.contents ul.list li img {
+.list-item-cover {
   float: left;
   margin-right: 16px;
 }
 
-.contents ul.list li .description {
-  overflow: hidden;
-}
-.contents ul.list li .description h2 {
-  margin: 0;
+.list-item-description h2 {
   color: rgb(23, 145, 208);
 }
-.contents ul.list li .description p {
+
+.list-item-description p {
   color: rgb(153, 153, 153);
 }
 
+
 .footer {
-  margin-top: 32px;
   background-color: rgb(51, 51, 51);
 }
-.footer .wrapper {
-  overflow: hidden;
-  max-width: 1024px;
-  margin: 0 auto;
-}
-.footer .wrapper .logo {
+
+.footer-logo {
   float: left;
   margin: 32px 0;
 }
-.footer .wrapper .lists {
+
+.footer-nav {
   float: right;
 }
-.footer .wrapper .links {
+
+.footer-item {
   float: left;
   margin: 32px;
 }
 
-.footer .wrapper .links h5 {
+.footer-item h5 {
   color: rgb(238, 238, 238);
   margin: 0 0 8px 0;
   font-size: 16px;
   font-weight: 800;
 }
-.footer .wrapper .links ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
 
-.footer .wrapper .links ul li {
+.footer-item li {
   color: rgb(89, 89, 89);
   font-size: 13px;
 }
 
-.twitter,
-.facebook,
-.pinterest {
+.social {
+    
+}    
+
+.social-item {
   background: url("./images/icon-sprite.png") no-repeat;
   display: inline-block;
+  width: 30px;
+  height: 30px;
   margin: 0 2px;
-}
-.twitter {
-  width: 30px;
-  height: 30px;
-  background-position: 0 0;
-}
-.twitter:hover {
-  background-position: 0 -30px;
+  text-indent: -9999px;
 }
 
-.facebook {
-  width: 30px;
-  height: 31px;
-  background-position: -30px 1px;
-}
-.facebook:hover {
-  background-position: -30px -29px;
+.social-item_twitter   { background-position: 0 0; }
+.social-item_facebook  { background-position: -30px 1px; }
+.social-item_pinterest { background-position: -60px 0; }
+
+.social-item:hover {
+    background-position-y: bottom; 
 }
 
-.pinterest {
-  width: 30px;
-  height: 30px;
-  background-position: -60px 0;
-}
-.pinterest:hover {
-  background-position: -60px -30px;
-}
